2006-03-29  Raja R Harinath  <rharinath@novell.com>

	* iface-large.cs: New test based on #75172.

2006-02-18  Zoltan Varga  <vargaz@gmail.com>

	* libtest.c pinvoke2.cs: Add tests for asany marshalling and directional
	attributes.

2006-01-30  Zoltan Varga  <vargaz@gmail.com>

	* Makefile.am (patch-libtool): New utility target for those using a
	static build.

2006-01-27  Raja R Harinath  <rharinath@novell.com>

	Add support for net_2_0 test cases.
	* Makefile.am (TEST_PROG_RUN, JITTEST_PROG_RUN): Don't set MONO_PATH.
	(with_mono_path2, RUNTIME2, GMCS, ILASM2): New.
	(TEST_CS2_SRC, TEST_IL2_SRC): New.
	(EXTRA_DIST): Add them.
	(testjit-default, testjit-net_2_0): New.  Copies of old testjit,
	updated to use appropriate runtimes.
	(testjit): Depend on them.
	* find-method.2.il: New test.

2006-01-26  Zoltan Varga  <vargaz@gmail.com>

	* thread-dump.cs: New file.

2005-12-22  Zoltan Varga  <vargaz@gmail.com>

	* interlocked.cs: Add "test" for Thread.MemoryBarrier ().

	* custom-attr.cs: Add test for #77045.

2005-12-15  Zoltan Varga  <vargaz@gmail.com>

	* cpblkTest.il: Fix storage of addresses into int32 variables.

2005-12-14  Zoltan Varga  <vargaz@gmail.com>

	* marshal2.cs: Remove test which can fail on 64 bit archs.

2005-11-28  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (ILASM): Use profile-dependent location of ilasm.

2005-10-21  Zoltan Varga  <vargaz@gmail.com>

	* pinvoke2.cs libtest.c: Add tests for byref struct marshalling.

2005-10-20  Miguel de Icaza  <miguel@novell.com>

	* Makefile.am (stresstest): Change the strings so we can scan the
	build logs more easily for failures (without the word "0 failed".

	* Makefile (stresstest): 

2005-10-20  Raja R Harinath  <rharinath@novell.com>

	* Makefile.am (testbundle): Use in-tree config, and in-tree
	shared directory.

2005-10-08  Zoltan Varga  <vargaz@gmail.com>

	* appdomain-unload.cs: Allocate some MBR objects between unloads to
	exercise more code.
